# Tiger-Mixer

./: README.md  auth-client  auth-setting
Agent/: Judger.py  Transaction.py  output.csv  test_judge.py  transaction_list_for_each_user.csv  user0.txt  user1.txt  user2.txt  user3.txt
Agent/.history/: Judger_20251121184951.py  Judger_20251122091709.py  Judger_20251122091714.py  Judger_20251122091745.py  Judger_20251122093528.py  Judger_20251122093532.py  Judger_20251122093537.py  Judger_20251122093538.py  Judger_20251122093544.py  Judger_20251122093547.py  Judger_20251122100818.py  Judger_20251122100821.py  Judger_20251122100824.py  Judger_20251122100828.py  Judger_20251122100858.py  Judger_20251122100900.py  Judger_20251122100904.py  Judger_20251122100905.py  Judger_20251122100908.py  Judger_20251122100911.py  Judger_20251122100912.py  Judger_20251122100916.py  Judger_20251122101306.py  Judger_20251122101310.py  Judger_20251122101319.py  Judger_20251122101320.py  Judger_20251122101322.py  Judger_20251122101323.py  Judger_20251122101328.py  Judger_20251122101329.py  Judger_20251122101332.py  Judger_20251122101334.py  Judger_20251122101336.py  Judger_20251122101341.py  Judger_20251122101346.py  Judger_20251122101348.py  Judger_20251122101349.py  Judger_20251122101358.py  Judger_20251122101405.py  Judger_20251122101407.py  (+2353 more)
Agent/.history/test/: Planner_20251209164906.py  SummaryAgent_20251209164923.py  User_20251209160013.py  User_20251209164922.py  User_20251210004050.py  config_20251209164949.py  main_20251209164857.py  test_20251209165017.py
Agent/Agentscope_learning/: Log.py  SummaryAgent.py  User.py  demo.py  demov1.py  output.csv  test.py  user0.txt  user1.txt  user2.txt  user3.txt
Agent/test/: Planner.py  config.py  prompt.py  test.py  tools.py
Config/: genesis.json  package-lock.json
Config/EllipticPlusPlus-main/Actors Dataset/: AddrAddr_edgelist.csv  AddrTx_edgelist.csv  Elliptic++_Actors_AddrTx_Graph_Viz.ipynb  Elliptic++_Actors_Classification.ipynb  Elliptic++_Actors_Dataset_Statistics.ipynb  RF.py  RF1.py  TxAddr_edgelist.csv  all_addresses_detection_results.csv  detect_address.py  detection_result_0x9339c1e4.csv  escrow_transaction_hashes.py  false_negatives.csv  feature_columns.json  feature_importance.csv  rf_model.pkl  scaler.pkl  simulated_transaction_results.csv  suspicious_addresses.csv  wallet_classification_results.csv  wallets_classes.csv  wallets_features.csv  wallets_features_classes_combined.csv
Config/EllipticPlusPlus-main/Transactions Dataset/: Elliptic++_Transactions_Feature_Analysis.ipynb  Elliptic++_Transactions_Graph_Visualization.ipynb
Config/Threshold-Crypto-PVSS-Class-Group-main/: CMakeLists.txt
Config/Threshold-Crypto-PVSS-Class-Group-main/src/: CMakeLists.txt
Config/Threshold-Crypto-PVSS-Class-Group-main/tests/: CMakeLists.txt  feldman_dkg_cl.cpp  simple_bdkg.cpp  simple_cl_dkg.cpp  simple_dkg.cpp  simple_dkg_cl.cpp
Config/bicycl/: .gitattributes  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt
Config/bicycl/benchs/: CMakeLists.txt  benchmark_CL_HSM2k.cpp  benchmark_CL_HSMqk.cpp  benchmark_CL_Threshold.cpp  benchmark_JoyeLibert.cpp  benchmark_Paillier.cpp  benchmark_proof_CLDL.cpp  benchmark_qfi.cpp  benchmark_threshold_ECDSA.cpp  benchmark_twoParty_ECDSA.cpp
Config/bicycl/cmake.utils/: cmake_uninstall.cmake.in
Config/bicycl/doc/: CMakeLists.txt  Doxyfile.in  include.tex
Config/bicycl/examples/: CL_HSM2k_setup.cpp  CL_HSMqk_example.cpp  CL_HSMqk_setup.cpp  CL_threshold_example.cpp  CMakeLists.txt  TwoPartyECDSA_example.cpp  TwoPartyECDSA_localhost_P1.cpp  TwoPartyECDSA_localhost_P2.cpp  network_helper.hpp
Config/bicycl/src/: CMakeLists.txt  bicycl.hpp  internals.hpp
Config/bicycl/src/bicycl/: Joye_Libert.hpp  Joye_Libert.inl  Paillier.hpp  Paillier.inl  parallelism.hpp  seclevel.hpp  seclevel.inl
Config/bicycl/tests/: CMakeLists.txt  test_CL_HSM2k.cpp  test_CL_HSMqk.cpp  test_CL_threshold.cpp  test_gmp_extras.cpp  test_qfi.cpp  test_threshold_ECDSA.cpp  test_twoPartyECDSA.cpp
Config/blockchain/consortium_blockchain/: README_OPTIMIZATION.md  genesis.json  genesis.json.backup  reinit_chain.sh  reinit_clean.sh  start_chain_optimized.sh  start_chain_optimized_background.sh  start_new_chain.sh  start_new_chain_background.sh
Config/pari-2.15.4/: CHANGES  COMPAT  Makefile  README
Config/pari-2.15.4/Olinux-x86_64/: Makefile  gp-dyn  libpari-gmp.so.8  mpker.c  pari.cfg  paricfg.h  parilvl0.h  parilvl1.h
Config/pari-2.15.4/config/: Makefile.SH  arch-osname  get_cc  get_libc  version
Config/pari-2.15.4/doc/: INSTALL.tex  Makefile  develop.tex  gphelp  gphelp.in  paricfg.tex  parimacro.tex  refcard-ell.tex  refcard-nf.tex  refmacro.tex  translations  tutorial.tex  usersch1.tex  usersch2.tex  usersch3.tex  usersch4.tex  usersch5.tex  usersch6.tex  usersch7.tex  usersch8.tex
Config/pari-2.15.4/examples/: Makefile
Config/pari-2.15.4/src/: funclist
Config/vrf-solidity-master/: QUICK_START.md  TEST_GUIDE.md  run_tests.sh  娴嬭瘯璇存槑.md
Effection/Code/: README.md  REFACTORING_GUIDE.md  main.py
Effection/Code/ReferenceSamples/: .gitkeep  (+3 more)
Effection/DataSet/: README.md  address.csv  eth_10000.csv  eth_20000.csv
Tiger-Mixer-origin/ecdsa/: CMakeLists.txt  run_benchmark.sh
Tiger-Mixer-origin/ecdsa/src/: CMakeLists.txt  alice.c  bob.c  tumbler.c  util.c
Tiger-Mixer/Tiger-Mixer-master/: G_g_q_explanation.md  README.md
Tiger-Mixer/Tiger-Mixer-master/ecdsa/src/: CMakeLists.txt  alice.c  auditor.c  auditor_detection.c  bob.c  calculate_reputation_stats.c  cl_canonical.c  committee_integration.c  committee_size_benchmark.c  committee_size_threshold2_benchmark.c  composite_malleable_proof.c  dkg_benchmark.c  dkg_committee_benchmark.c  dkg_integration.c  dkg_reconstruction_benchmark.c  dkg_threshold_benchmark.c  gs.c  gs_serial.c  http_zk_client.c  keygen.c  malleable_proof.c  pedersen_dkg.c  reputation_tracker.c  reputation_tracker_util.c  secret_share.c  secret_share_benchmark.c  secret_share_receiver.c  secret_share_threshold_benchmark.c  threshold_benchmark.c  tumbler.c  util.c  vrf_cli.c  vrf_generator.c  vrf_test.c
(+293 files in other folders)
