find_library(RELIC relic HINTS /home/zxx/Config/relic/build/lib)
find_library(PARI pari HINTS /usr/local/lib)
find_library(GMP gmp HINTS /usr/lib/x86_64-linux-gnu)
find_library(ZMQ zmq HINTS /usr/lib/x86_64-linux-gnu)
include_directories(/usr/local/include/pari)
add_executable(alice alice.c util.c)
target_link_libraries(alice ${RELIC} ${PARI} ${GMP} ${ZMQ})
add_executable(bob bob.c util.c)
target_link_libraries(bob ${RELIC} ${PARI} ${GMP} ${ZMQ})
add_executable(tumbler tumbler.c util.c)
target_link_libraries(tumbler ${RELIC} ${PARI} ${GMP} ${ZMQ})
add_executable(wrapper wrapper.c)